[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scenes/LevelSelection/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://Assets/ssd_sad_neu.png" type="Texture" id=2]
[ext_resource path="res://Assets/gpu_sad_klein.png" type="Texture" id=3]
[ext_resource path="res://Assets/ram_sad_neu.png" type="Texture" id=4]
[ext_resource path="res://Assets/cpu_sad_neu.png" type="Texture" id=5]
[ext_resource path="res://Assets/ram_placeholder.png" type="Texture" id=6]
[ext_resource path="res://Assets/cpu_placeholder.png" type="Texture" id=7]
[ext_resource path="res://Assets/pc_empty.png" type="Texture" id=8]
[ext_resource path="res://Assets/gpu_placeholder.png" type="Texture" id=9]
[ext_resource path="res://Assets/mother_board_face_sad.png" type="Texture" id=10]
[ext_resource path="res://Assets/larry_sad.png" type="Texture" id=11]
[ext_resource path="res://Assets/cpu_mounted.png" type="Texture" id=12]
[ext_resource path="res://Assets/ram_mounted.png" type="Texture" id=13]
[ext_resource path="res://Assets/gpu_mounted.png" type="Texture" id=14]
[ext_resource path="res://Assets/ssd_mounted.png" type="Texture" id=15]
[ext_resource path="res://Assets/larry_happy.png" type="Texture" id=16]
[ext_resource path="res://Assets/mother_board_face_happy.png" type="Texture" id=17]
[ext_resource path="res://Assets/reset_button_pressed.png" type="Texture" id=18]
[ext_resource path="res://Assets/reset_button.png" type="Texture" id=19]

[node name="LevelSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 3840.0
margin_bottom = 2160.0

[node name="PcEmpty" type="Sprite" parent="."]
position = Vector2( 1867, 1070.5 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="CPU" type="TextureButton" parent="."]
margin_left = 939.0
margin_top = 432.0
margin_right = 1267.0
margin_bottom = 801.0
rect_rotation = 139.608
texture_normal = ExtResource( 5 )

[node name="GPU" type="TextureButton" parent="."]
margin_left = 599.47
margin_top = 1080.31
margin_right = 1622.47
margin_bottom = 1591.31
rect_rotation = 48.0201
rect_pivot_offset = Vector2( -56.7543, -119.289 )
texture_normal = ExtResource( 3 )

[node name="SSD" type="TextureButton" parent="."]
margin_left = 2748.0
margin_top = 1632.0
margin_right = 3115.0
margin_bottom = 2110.0
rect_rotation = 317.134
texture_normal = ExtResource( 2 )

[node name="RAM" type="TextureButton" parent="."]
margin_left = 3122.0
margin_top = 714.0
margin_right = 3809.0
margin_bottom = 928.0
rect_rotation = -129.297
texture_normal = ExtResource( 4 )

[node name="MotherBoardFaceSad" type="Sprite" parent="."]
position = Vector2( 1563, 603 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )

[node name="MotherBoardFaceHappy" type="Sprite" parent="."]
visible = false
position = Vector2( 1562, 603 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 17 )

[node name="LarrySad" type="Sprite" parent="."]
position = Vector2( 2283, 980 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 11 )

[node name="LarryHappy" type="Sprite" parent="."]
visible = false
position = Vector2( 2283, 979 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 16 )

[node name="CpuPlaceholder" type="Sprite" parent="."]
position = Vector2( 1574, 815 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )

[node name="GpuPlaceholder" type="Sprite" parent="."]
position = Vector2( 1561, 1184 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )

[node name="RamPlaceholder" type="Sprite" parent="."]
position = Vector2( 1824, 811 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="CpuMounted" type="Sprite" parent="."]
visible = false
position = Vector2( 1555, 796 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 12 )

[node name="CpuMountedButton" type="TextureButton" parent="CpuMounted"]
margin_left = -377.0
margin_top = -390.0
margin_right = 373.0
margin_bottom = 407.0

[node name="GpuMounted" type="Sprite" parent="."]
visible = false
position = Vector2( 1506, 1316 )
scale = Vector2( 0.300919, 0.300919 )
texture = ExtResource( 14 )

[node name="GpuMountedButton" type="TextureButton" parent="GpuMounted"]
margin_left = -984.0
margin_top = -734.0
margin_right = 900.0
margin_bottom = -239.0
rect_pivot_offset = Vector2( -56.7543, -119.289 )

[node name="RamMounted" type="Sprite" parent="."]
visible = false
position = Vector2( 1827, 810 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 13 )

[node name="RamMountedButton" type="TextureButton" parent="RamMounted"]
margin_left = -343.0
margin_top = -827.0
margin_right = 320.0
margin_bottom = 820.0

[node name="SsdMounted" type="Sprite" parent="."]
visible = false
position = Vector2( 2075, 1439 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 15 )

[node name="SsdMountedButton" type="TextureButton" parent="SsdMounted"]
margin_left = 103.0
margin_top = 87.0
margin_right = 953.0
margin_bottom = 727.0

[node name="RestartButton" type="TextureButton" parent="."]
margin_left = 3404.0
margin_top = 1326.0
margin_right = 4339.0
margin_bottom = 1642.0
rect_rotation = 270.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )

[connection signal="pressed" from="CPU" to="." method="_on_CPU_pressed"]
[connection signal="pressed" from="GPU" to="." method="_on_GPU_pressed"]
[connection signal="pressed" from="SSD" to="." method="_on_SSD_pressed"]
[connection signal="pressed" from="RAM" to="." method="_on_RAM_pressed"]
[connection signal="pressed" from="CpuMounted/CpuMountedButton" to="." method="_on_CPU_pressed"]
[connection signal="pressed" from="GpuMounted/GpuMountedButton" to="." method="_on_GPU_pressed"]
[connection signal="pressed" from="RamMounted/RamMountedButton" to="." method="_on_RAM_pressed"]
[connection signal="pressed" from="SsdMounted/SsdMountedButton" to="." method="_on_SSD_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
